--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "backend-starter",
+  "name": "spam-backend",
   "version": "1.0.0",
-  "description": "Backend starter template",
+  "description": "$SPAM backend",
   "main": "dist/server.js",
-  "repository": "https://github.com/Borodutch/backend-starter",
+  "repository": "https://github.com/Borodutch/spam-backend",
   "author": "backmeupplz <backmeupplz@gmail.com>",
   "prettier": "@big-whale-labs/prettier-config",
   "license": "MIT",
@@ -11,7 +11,6 @@
     "distribute": "yarn build && node dist/server.js",
     "start": "tsc-watch --skipLibCheck --onSuccess 'node dist/server.js'",
     "build": "tsc --skipLibCheck",
-    "test": "yarn jest --forceExit --runInBand",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 ./src/",
     "lint-fix": "yarn eslint ./src/ --fix"
@@ -19,12 +18,13 @@
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@koa/cors": "^5.0.0",
+    "@standard-crypto/farcaster-js": "^7.1.1",
     "amala": "^10.0.4",
     "axios": "^1.6.2",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
-    "facebook-node-sdk": "^0.2.0",
-    "jsonwebtoken": "^9.0.2",
+    "ethers": "^6.9.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
@@ -36,25 +36,16 @@
     "@big-whale-labs/prettier-config": "^1.1.3",
     "@rushstack/eslint-patch": "^1.6.1",
     "@typegoose/typegoose": "^12.0.0",
-    "@types/jest": "^29.5.11",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/koa": "^2.13.12",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-router": "^7.4.8",
     "@types/koa__cors": "^4.0.3",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
-    "@types/supertest": "^2.0.16",
-    "axios-mock-adapter": "^1.22.0",
     "eslint": "^8.56.0",
-    "http-graceful-shutdown": "^3.1.13",
-    "jest": "^29.7.0",
     "module-alias": "^2.2.3",
-    "mongodb-memory-server": "^9.1.3",
     "prettier": "^3.1.1",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   },
