Add @borodutch/spam-contract dependency and start listener

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint-fix": "yarn eslint ./src/ --fix"
   },
   "dependencies": {
+    "@borodutch/spam-contract": "^0.0.2",
     "@hapi/boom": "^10.0.1",
     "@koa/cors": "^5.0.0",
     "@standard-crypto/farcaster-js": "^7.1.1",
